opentreemap/treemap/css/sass/partials/_navbar.scss
// Partial: Navbar

.navbar {
    font-size: 1.6rem;
    margin-bottom: 0;
    background: $navbar-color;
    border: none;
    min-height: 44px;
    box-shadow: none;

    @media (max-width: 979px) {
        margin-bottom: 0;
        position: absolute;
    }

    .nav {
        margin: 0 -15px;

        &.navbar-left {
            margin-left: 15px;
        }
        &.navbar-right {
            margin-right: 15px;
        }

        > li {
            margin-left: 20px;
            height: 44px;

            &:first-child {
                margin-left: 0;
            }
            &.active {
                > a {
                    background-color: $navbar-color;
                    border-bottom: 4px solid $primary-color;
                    box-shadow: none;

                    &:hover,
                    &:focus {
                        background-color: $navbar-color;
                    }
                }
            }
            &.dropdown {
                &.active,
                &.open {
                    > a {
                        background-color: transparent !important;
                    }
                }

                ul.dropdown-menu {
                    margin: -1px 0 0;
                    border-radius: 0;
                    padding: 0;

                    &:before, &:after {
                        content: none;
                    }
                    
                    > li {
                        a {
                            padding: 8px 15px 8px 10px;
                            font-weight: 400;
                            color: $subtext-color;

                            &:hover {
                                background: none;
                                color: $main-text-color;

                                > i {
                                    color: $primary-color;
                                }
                            }
                            &:first-child {
                                border-bottom: 1px solid #EEE;
                            }

                            > i {
                                margin-right: 5px;
                                top: 2px;
                                position: relative;
                                color: $subtext-color;
                            }
                        }
                    }
                }
            }
            &.add-menu {
                > a {
                    font-size: 2rem;
                    width: 28px;
                    border-bottom: none;
                }
            }
            &.user-img {
                overflow: hidden;
                height: 30px;
                width: 30px;
                border-radius: 4px;
                top: 6px;
                position: relative;
                
                @media (max-width: 979px) {
                    display: none;
                }

                a {
                    padding: 0;
                    height: auto;
                    overflow: hidden;
                    border-radius: 4px;
                }
                img {
                    max-width: 105%;
                }
            }

            > a {
                padding: 10px 0;
                height: 44px;
                font-size: 1.4rem;
                font-weight: 400;
                cursor: pointer;

                > .reputation {
                    font-size: 1.2rem;
                    color: white;
                }

                &:hover,
                &:focus {
                    background-color: $navbar-color;
                }
            }
        }
    }
}

@media (max-width: 767px) {
    .navbar {
        margin: 0;
    }
}

.user-dock {
    position: fixed;
    left: 0;
    right: 0;
    background: lighten($navbar-color, 5%);
    z-index: 999;
    top: -106px;
    height: 150px;
    padding: 20px 30px 25px;
    display: block;
    transition: top 0.5s;

    &.active {
        top: 44px;
    }

    @media (max-width: 979px) {
        display: none;
    }

    .col-md-4 {
        border-left: 1px solid darken($well-color, 15%);
        padding-left: 30px;
    }

    .user-img {
        border-radius: 9px;
    }
    h2 {
        color: white;
        margin: 0 0 2px;
    }
    h4 {
        font-size: 1.6rem;
        color: $well-color;
    }
    label {
        color: $well-color;
        width: 100%;

        a {
            color: white;
        }
    }
    ul {
        li {
            color: white;

            a {
                color: white;
                
                & + span {
                    color: white;
                    font-style: italic;
                    margin-left: 5px;
                }
            }
        }
    }
}

